# rufus

./: .env.example  .gitignore  README.md  docker-compose.yml
django_app/: requirements.txt
django_app/rufus_control/: __init__.py  apps.py  models.py  ros_bridge.py
django_app/rufus_vr/: consumers.py  routing.py
django_app/rufus_web/apps/authentication/: apps.py  models.py  serializers.py  urls.py  views.py
django_app/rufus_web/apps/core/: __init__.py  admin.py  apps.py  middleware.py  models.py
django_app/rufus_web/apps/scheduler/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
django_app/rufus_web/apps/scheduler/migrations/: 0001_initial.py
django_app/rufus_web/project/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
docker/web_backend/: Dockerfile
docker/web_frontend/: Dockerfile
docs/: DEPLOYMENT_GUIDE.md  IMPLEMENTATION_GUIDE.md  RUFUS_System_Architecture.md  django_template_analysis.md  jetson_ros2_docker.md  landerpi_analysis.md  waveshare_hardware.md
frontend/: index.html
frontend/src/: App.jsx
frontend/src/components/: Dashboard.jsx  LoginForm.jsx  Navigation.jsx  OTPForm.jsx
frontend/src/pages/: Dashboard.jsx  ManualControl.jsx
ros2_ws/src/rufus_description/urdf/: rufus.urdf.xacro
ros2_ws/src/rufus_drivers/: package.xml  setup.py
ros2_ws/src/rufus_drivers/launch/: drivers.launch.py
ros2_ws/src/rufus_drivers/rufus_drivers/: ddsm315_driver.py  st3215_driver.py
